--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,26 +33,26 @@ android {
 
 dependencies {
     implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'com.google.android.material:material:1.5.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+    implementation 'com.google.android.material:material:1.6.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.navigation:navigation-fragment:2.3.5'
-    implementation 'androidx.navigation:navigation-ui:2.3.5'
-    implementation 'com.google.android.gms:play-services-maps:18.0.1'
-    implementation 'com.google.android.gms:play-services-location:19.0.0'
-    implementation 'com.google.firebase:firebase-auth:21.0.1'
-    implementation 'com.google.firebase:firebase-database:20.0.3'
-    implementation 'com.google.android.libraries.places:places:2.5.0'
-    implementation 'com.google.firebase:firebase-storage:20.0.0'
+    implementation 'androidx.navigation:navigation-fragment:2.5.1'
+    implementation 'androidx.navigation:navigation-ui:2.5.1'
+    implementation 'com.google.android.gms:play-services-maps:18.1.0'
+    implementation 'com.google.android.gms:play-services-location:20.0.0'
+    implementation 'com.google.firebase:firebase-auth:21.0.7'
+    implementation 'com.google.firebase:firebase-database:20.0.5'
+    implementation 'com.google.android.libraries.places:places:2.6.0'
+    implementation 'com.google.firebase:firebase-storage:20.0.1'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'com.airbnb.android:lottie:4.2.2'
     implementation 'com.karumi:dexter:6.2.3'
     implementation 'com.android.support:design:31.0.0'
-   implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.6.0'
-   implementation 'androidx.core:core:1.7.0'
-    implementation 'androidx.core:core-ktx:1.7.0'
+   implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.7.10'
+   implementation 'androidx.core:core:1.8.0'
+    implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'com.cuberto:liquid-swipe:1.0.0'
     implementation platform('com.google.firebase:firebase-bom:29.0.3')
     implementation 'com.google.firebase:firebase-analytics'
@@ -61,7 +61,7 @@ dependencies {
     implementation 'com.chaos.view:pinview:1.4.4'
     implementation 'androidx.browser:browser:1.4.0'
     implementation 'com.google.android.gms:play-services-safetynet:18.0.1'
-    implementation 'com.google.firebase:firebase-appcheck-safetynet:16.0.0-beta04'
+    implementation 'com.google.firebase:firebase-appcheck-safetynet:16.0.0'
     implementation 'com.rengwuxian.materialedittext:library:2.1.4'
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.23'
     implementation 'com.sothree.slidinguppanel:library:3.4.0'
