--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,10 +40,11 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui:2.5.1'
     implementation 'com.google.android.gms:play-services-maps:18.1.0'
     implementation 'com.google.android.gms:play-services-location:20.0.0'
-    implementation 'com.google.firebase:firebase-auth:21.0.7'
-    implementation 'com.google.firebase:firebase-database:20.0.5'
+    implementation 'com.google.firebase:firebase-auth:21.0.8'
+    implementation 'com.google.firebase:firebase-database:20.0.6'
     implementation 'com.google.android.libraries.places:places:2.6.0'
-    implementation 'com.google.firebase:firebase-storage:20.0.1'
+    implementation 'com.google.firebase:firebase-storage:20.0.2'
+    implementation 'com.google.android.gms:play-services-auth:20.3.0'
     testImplementation 'junit:junit:5.8.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -61,11 +62,12 @@ dependencies {
     implementation 'com.chaos.view:pinview:1.4.4'
     implementation 'androidx.browser:browser:1.4.0'
     implementation 'com.google.android.gms:play-services-safetynet:18.0.1'
-    implementation 'com.google.firebase:firebase-appcheck-safetynet:16.0.0'
+    implementation 'com.google.firebase:firebase-appcheck-safetynet:16.0.2'
     implementation 'com.rengwuxian.materialedittext:library:2.1.4'
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.23'
     implementation 'com.sothree.slidinguppanel:library:3.4.0'
     implementation 'com.firebase:geofire-java:3.0.0'
     implementation 'com.github.jd-alexander:library:1.1.0'
     implementation 'com.github.bumptech.glide:glide:4.12.0'
+    implementation 'com.shobhitpuri.custombuttons:google-signin:1.1.0'
 }
